--- a/assignment10/Makefile
+++ b/assignment10/Makefile
@@ -1,6 +1,6 @@
-NAME = heat
+NAME = nbody
 CC = mpicc
-CFLAGS = -std=gnu99 -fstrict-overflow -Wall -Wshadow -pedantic
+CFLAGS = -std=gnu11 -fstrict-overflow -ggdb -Werror -Wall -Wshadow -pedantic
 LDFLAGS = -lm -lrt -I $(CURDIR)
 
 #error if student directory is not set
@@ -8,24 +8,15 @@ ifndef SDIR
 SDIR = student
 endif
 
-#Compiler flags
-#if mode variable is empty, setting release build mode
-ifeq ($(mode),debug)
-	CFLAGS += -ggdb
+ifndef NOGUI
+LDFLAGS += -lX11 -lXrandr -lGL
 else
-	mode = release
-	CFLAGS += -O2
+CFLAGS += -DDISABLE_GUI
 endif
-
-VPATH = $(SDIR)
-SRC = $(wildcard *.c) $(wildcard */*.c)
-
-OBJ_SEQ = $(SDIR)/main.o $(SDIR)/$(NAME).o $(SDIR)/$(NAME)_seq.o $(SDIR)/helper.o
-OBJ_PAR = $(SDIR)/main.o $(SDIR)/$(NAME).o $(SDIR)/$(NAME)_par.o $(SDIR)/helper.o
-OBJ_UNIT = $(SDIR)/unit_test.o $(SDIR)/$(NAME).o $(SDIR)/$(NAME)_ref.o $(SDIR)/$(NAME)_par.o $(SDIR)/helper.o
 
 # The dependency file names.
 DEPS := $(OBJ_SEQ:.o=.d)
+SRC = *.c $(SDIR)/*.c
 
 all: sequential parallel unit_test
 
@@ -35,33 +26,22 @@ parallel: $(SDIR)/$(NAME)_par
 
 unit_test: $(SDIR)/unit_test
 
-$(SDIR)/performance_test: $(OBJ_PERF)
-	$(CC) -o $@ $(OBJ_PERF) $(CFLAGS) $(LDFLAGS)
+$(SDIR)/$(NAME)_seq:.FORCE
+	$(CC) $(CFLAGS) -DBUILD_SEQ $(SRC) -o $@ $(LDFLAGS)
 
-$(SDIR)/$(NAME)_seq : $(OBJ_SEQ)
-	$(CC) -o $@ $(OBJ_SEQ) $(CFLAGS) $(LDFLAGS)
+$(SDIR)/$(NAME)_par: .FORCE
+	$(CC) $(CFLAGS) -DBUILD_PAR $(SRC) -o $@ $(LDFLAGS)
 
-$(SDIR)/$(NAME)_par : $(OBJ_PAR)
-	$(CC) -o $@ $(OBJ_PAR) $(CFLAGS) $(LDFLAGS)
-
-$(SDIR)/unit_test: $(OBJ_UNIT)
-	$(CC) -o $@ $(OBJ_UNIT) $(CFLAGS) $(LDFLAGS) 
-
-$(SDIR)/%.d: %.c
-	@set -e; rm -f $@; \
-	$(CC) -MM $(CPPFLAGS) $< > $@.$$$$; \
-	sed 's,\($*\)\.o[ :]*,\1.o $@ : ,g' < $@.$$$$ > $@; \
-	rm -f $@.$$$$
-
-$(SDIR)/%.o: %.c
-	$(CC) -c -MMD -MP $< -o $@ $(CFLAGS) $(LDFLAGS)
+$(SDIR)/unit_test: .FORCE
+	$(CC) $(CFLAGS) -DBUILD_UNIT $(SRC) -o $@ $(LDFLAGS)
 
 clean:
-	rm -f $(SDIR)/$(NAME)_par $(SDIR)/$(NAME)_seq $(SDIR)/unit_test $(SDIR)/*.o $(SDIR)/*.d
-	
+	rm -f $(SDIR)/$(NAME)_par $(SDIR)/$(NAME)_seq $(SDIR)/unit_test
+
 -include $(DEPS)
 
-.PHONY : all sequential parallel unit_test clean performance_test
+.FORCE:
+.PHONY: all sequential parallel unit_test clean .FORCE
 
 
 
